Explain why we should use kernel_map instead of module_map, and why we can't.

We should probably add some GCC flags in the modules makefiles to make
sure the relocations generated are not 32bit.

Related to PR/43438.